@@ -53,6 +53,50 @@ describe Administrate::Generators::DashboardGenerator, :generator do
         )
       end
 
+      it "determines a class_name from `through` and `source` options" do
+        begin
+          ActiveRecord::Schema.define do
+            create_table :people
+            create_table :concerts
+            create_table(:numbers) { |t| t.references :ticket }
+
+            create_table :tickets do |t|
+              t.references :concert
+              t.references :attendee
+            end
+          end
+
+          class Concert < ActiveRecord::Base
+            has_many :tickets
+            has_many :attendees, through: :tickets, source: :person
+            has_many :venues, through: :tickets
+            has_many :numbers, through: :tickets
+          end
+
+          class Ticket < ActiveRecord::Base
+            belongs_to :concert
+            belongs_to :person
+            belongs_to :venue
+            has_many :numbers
+          end
+
+          class Number; end
+          class Person < ActiveRecord::Base; end
+
+          dashboard = file("app/dashboards/concert_dashboard.rb")
+
+          run_generator ["concert"]
+
+          expect(dashboard).to contain(
+            'attendees: Field::HasMany.with_options(class_name: "Person"),',
+          )
+          expect(dashboard).to contain("venues: Field::HasMany,")
+          expect(dashboard).to contain("numbers: Field::HasMany,")
+        ensure
+          remove_constants :Concert, :Ticket, :Number, :Person
+        end
+      end
+
       it "includes belongs_to relationships" do
         dashboard = file("app/dashboards/order_dashboard.rb")
 
@@ -62,27 +106,31 @@ describe Administrate::Generators::DashboardGenerator, :generator do
       end
 
       it "detects has_one relationships" do
-        ActiveRecord::Schema.define do
-          create_table :accounts, force: true
+        begin
+          ActiveRecord::Schema.define do
+            create_table :accounts
 
-          create_table :profiles, force: true do |t|
-            t.references :account
+            create_table :profiles do |t|
+              t.references :account
+            end
           end
+
+          class Account < ActiveRecord::Base
+            has_one :profile
+          end
+
+          class Ticket < ActiveRecord::Base
+            belongs_to :account
+          end
+
+          dashboard = file("app/dashboards/account_dashboard.rb")
+
+          run_generator ["account"]
+
+          expect(dashboard).to contain("profile: Field::HasOne")
+        ensure
+          remove_constants :Account, :Ticket
         end
-
-        class Account < ActiveRecord::Base
-          has_one :profile
-        end
-
-        class Ticket < ActiveRecord::Base
-          belongs_to :account
-        end
-
-        dashboard = file("app/dashboards/account_dashboard.rb")
-
-        run_generator ["account"]
-
-        expect(dashboard).to contain("profile: Field::HasOne")
       end
     end
 
@@ -120,5 +168,9 @@ describe Administrate::Generators::DashboardGenerator, :generator do
         "class Admin::CustomersController < Admin::ApplicationController",
       )
     end
+  end
+
+  def remove_constants(*constants)
+    constants.each { |const| Object.send(:remove_const, const) }
   end
 end
